@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty methods

class NotificationEvent <<MediatR Notification>> {
  +PhotographerId : Guid
  +EventType : NotificationEventType
  +Category : NotificationCategory
  +Title : string
  +Message : string
  +ClientName : string?
  +Link : string?
}

class NotificationEventHandler <<Handler>> {
  -_mediator : IMediator
  +Handle(NotificationEvent) : Task
}

class CreateNotificationCommand <<Command>> {
  +PhotographerId : Guid
  +EventType : NotificationEventType
  +Category : NotificationCategory
  +Title : string
  +Message : string
  +ClientName : string?
  +Link : string?
}

class CreateNotificationCommandHandler <<Handler>> {
  -_db : IApplicationDbContext
  -_email : IEmailService
  -_push : IPushNotificationService
  +Handle() : Result<Guid>
}

class GetNotificationsQuery <<Query>> {
  +Category : NotificationCategory?
  +IsRead : bool?
  +Page : int
  +PageSize : int
}

class GetUnreadCountQuery <<Query>> {
}

class MarkNotificationReadCommand <<Command>> {
  +NotificationId : Guid
}

class MarkAllNotificationsReadCommand <<Command>> {
  +Category : NotificationCategory?
}

class UpdateNotificationPreferenceCommand <<Command>> {
  +EventType : NotificationEventType
  +EmailEnabled : bool?
  +PushEnabled : bool?
  +InAppEnabled : bool?
  +EmailDigestOption : EmailDigestOption?
}

class SendDigestEmailCommand <<Command>> {
  +SinceUtc : DateTime
}

NotificationEventHandler ..> NotificationEvent
NotificationEventHandler ..> CreateNotificationCommand
CreateNotificationCommandHandler ..> CreateNotificationCommand

@enduml
